--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,45 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  position: relative;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --default-font: "Poppins", sans-serif;
+  --logotype-font: "Ubuntu", sans-serif;
+  --divider-color: #3d3d3d;
+  --divider-color-dark: #f9f9f9;
+  --divider-width: 1px;
+  --default-margin: 20px;
+  --default-padding: 20px;
+  --padding-small: 14px;
+  --margin-small: 14px;
+  --round-full: 50px;
+  --round-box: 8px;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* Mainly for buttons*/
+  --primary: #7bff5c;
+  --primaryHover: #76ec5b;
+  --primaryActive: #68cf51;
+  --secondary: #fff;
+  --secondaryHover: #cacaca;
+  --secondaryActive: #eee;
+  --outline: transparent;
+  --outlineHover: #ffffff11;
+  --outlineActive: #ffffff22;
+  --primary-text-color: #000;
+  --secondary-text-color: #000;
+  --outline-text-color: #ffffff;
+  --disabled-text-color-light: #aaa;
+  --disabled-text-color: #444;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+#root {
+  height: 100vh;
+  width: 100%;
 }
 
 body {
+  color: #fff;
+  font-family: "Poppins";
+  background-color: #000;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  position: relative;
+  height: 100vh;
 }
