--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -7,6 +7,7 @@
   --logotype-font: "Poppins", sans-serif;
   --grafitti-font: "SedgwickAve";
   --divider-color: #333c43;
+  --divider-color-input-hover: #4f5e69;
   --divider-color-dark: #f9f9f9;
   --divider-width: 1px;
   --default-margin: 20px;
@@ -14,7 +15,7 @@
   --padding-small: 14px;
   --margin-small: 14px;
   --round-full: 50px;
-  --round-box: 8px;
+  --round-box: 16px;
 
   /* Mainly for buttons*/
   --primary: #7bff5c;
@@ -29,6 +30,7 @@
   --primary-text-color: #000;
   --secondary-text-color: #000;
   --outline-text-color: #ffffff;
+  --disabled-background-color: #191e22;
   --disabled-text-color-light: #aaa;
   --disabled-text-color: #444;
 }
