--- a/src/ui/components/shared/PageContainer/styles.module.css
+++ b/src/ui/components/shared/PageContainer/styles.module.css
@@ -12,8 +12,12 @@
 }
 
 .inner_page_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   max-width: 367px;
   width: 100%;
+  height: 600px;
   position: relative;
 }
 
