--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -7,15 +7,17 @@
   --logotype-font: "Poppins", sans-serif;
   --grafitti-font: "SedgwickAve";
   --divider-color: #333c43;
-  --divider-color-input-hover: #4f5e69;
+  --divider-color-input-hover: #7aff5c;
+  --dim: #c2c2c2;
   --divider-color-dark: #f9f9f9;
   --divider-width: 1px;
   --default-margin: 20px;
   --default-padding: 20px;
   --padding-small: 14px;
   --margin-small: 14px;
+  --margin-large: 30px;
   --round-full: 50px;
-  --round-box: 16px;
+  --round-box: 10px;
 
   /* Mainly for buttons*/
   --primary: #7bff5c;
