--- a/src/ui/components/base/Button/styles.module.css
+++ b/src/ui/components/base/Button/styles.module.css
@@ -13,6 +13,7 @@
   background-color: transparent;
   font-family: var(--default-font);
   font-weight: 600;
+  font-size: var(--text-size-small);
   width: 100%;
   padding: var(--padding-small);
   display: flex;
