--- a/src/ui/components/shared/WizardNavigator/styles.module.css
+++ b/src/ui/components/shared/WizardNavigator/styles.module.css
@@ -26,6 +26,12 @@
 .pageContainer {
   position: relative;
   height: calc(100% - 100px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .activePage {
