--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -48,6 +48,8 @@
 #root {
   height: 100vh;
   width: 100%;
+  min-width: 357px;
+  min-height: 600px;
 }
 
 body {
@@ -58,4 +60,6 @@ body {
   margin: 0;
   position: relative;
   height: 100vh;
+  min-width: 357px;
+  min-height: 600px;
 }
