--- a/src/ui/components/base/Input/TextInput/styles.module.css
+++ b/src/ui/components/base/Input/TextInput/styles.module.css
@@ -53,3 +53,18 @@
     border-color: var(--divider-color-input-hover);
   }
 }
+
+.input_label {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+}
+
+.error_text_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
