--- a/src/ui/components/shared/PageContainer/styles.module.css
+++ b/src/ui/components/shared/PageContainer/styles.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  min-width: 357px;
 }
 
 .extension {
@@ -15,9 +16,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 367px;
+  max-width: 317px;
+
   width: 100%;
-  height: 500px;
+  height: 600px;
   position: relative;
 }
 
