feat: started work on implementing browser apis across wallet, did work on wizard

--- a/src/ui/components/base/Button/styles.module.css
+++ b/src/ui/components/base/Button/styles.module.css
@@ -99,3 +99,8 @@
 .disabled .container {
   color: var(--disabled-text-color) !important;
 }
+
+.fit_content {
+  width: fit-content !important;
+  flex-grow: 0;
+}
