--- a/src/ui/components/base/Grid/styles.module.css
+++ b/src/ui/components/base/Grid/styles.module.css
@@ -7,13 +7,12 @@
 }
 .grid_container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* 2 equal-width columns */
-  grid-template-rows: repeat(6, auto); /* 6 rows */
+
   gap: 8px; /* Optional: space between grid items */
   width: 100%;
 }
 
-.seedphrase_word {
+.grid_item {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -22,12 +21,16 @@
   font-size: var(--text-size-extra-small);
   color: var(--outline-text-color);
   padding: 8px;
-
+  gap: var(--margin-small);
   border-radius: var(--round-box);
   border: 1px solid var(--divider-color);
   background-color: transparent;
 }
 
-.seedphrase_word_number {
+.no_outline {
+  border: none;
+}
+
+.grid_item_index {
   color: var(--primary);
 }
