--- a/src/ui/components/shared/WizardNavigator/styles.module.css
+++ b/src/ui/components/shared/WizardNavigator/styles.module.css
@@ -10,11 +10,15 @@
 
 .wizard_header {
   width: 100%;
-  height: 60px;
+  height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
+}
+
+.backButton {
+  padding: 10px;
 }
 
 .page {
@@ -22,14 +26,14 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: calc(100% - 60px);
+  height: calc(100% - 70px);
   width: 100%;
   position: relative;
 }
 
 .pageContainer {
   position: relative;
-  height: calc(100% - 60px);
+  height: calc(100% - 70px);
   display: flex;
   justify-content: center;
   align-items: center;
