--- a/src/ui/components/base/Input/TextInput/styles.module.css
+++ b/src/ui/components/base/Input/TextInput/styles.module.css
@@ -35,7 +35,7 @@
 .container {
   transition: 0.3s ease-in-out;
 
-  width: calc(100% - 2 * var(--padding-small));
+  /* width: calc(100% - 2 * var(--padding-small)); */
   outline: none;
   border-color: var(--divider-color);
   border-width: 1px;
