--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -1,67 +1,143 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
-  position: relative;
+    position: relative;
 
-  --background-main: #0b0f12ff;
+    --background-main: #0b0f12ff;
 
-  --default-font: "Poppins", sans-serif;
-  --logotype-font: "Poppins", sans-serif;
-  --grafitti-font: "SedgwickAve";
-  --divider-color: #333c43;
-  --divider-color-input-hover: #7aff5c;
-  --dim: #c2c2c2;
-  --divider-color-dark: #f9f9f9;
-  --divider-width: 1px;
-  --default-margin: 20px;
-  --default-padding: 20px;
-  --padding-small: 14px;
-  --margin-small: 14px;
-  --margin-large: 30px;
-  --round-full: 50px;
-  --round-box: 10px;
+    --default-font: "Poppins", sans-serif;
+    --logotype-font: "Poppins", sans-serif;
+    --grafitti-font: "SedgwickAve";
+    --divider-color: #333c43;
+    --divider-color-input-hover: #7aff5c;
+    --dim: #c2c2c2;
+    --divider-color-dark: #f9f9f9;
+    --divider-width: 1px;
+    --default-margin: 20px;
+    --default-padding: 20px;
+    --padding-small: 14px;
+    --margin-small: 14px;
+    --margin-large: 30px;
+    --round-full: 50px;
+    --round-box: 10px;
 
-  /* Mainly for buttons*/
-  --primary: #7bff5c;
-  --primaryHover: #76ec5b;
-  --primaryActive: #68cf51;
-  --secondary: #fff;
-  --secondaryHover: #cacaca;
-  --secondaryActive: #eee;
-  --outline: transparent;
-  --outlineHover: #ffffff05;
-  --outlineActive: #ffffff07;
-  --primary-text-color: #000;
-  --secondary-text-color: #000;
-  --outline-text-color: #ffffff;
-  --disabled-background-color: #191e22;
-  --disabled-text-color-light: #aaa;
-  --disabled-text-color: #444;
+    /* Mainly for buttons*/
+    --btnPrimary: #7bff5c;
+    --btnPrimaryHover: #76ec5b;
+    --btnPrimaryActive: #68cf51;
+    /* --secondary: #fff; */
+    --secondaryHover: #cacaca;
+    --secondaryActive: #eee;
+    --outline: transparent;
+    --outlineHover: #ffffff05;
+    --outlineActive: #ffffff07;
+    --primary-text-color: #000;
+    --secondary-text-color: #000;
+    --outline-text-color: #ffffff;
+    --disabled-background-color: #191e22;
+    --disabled-text-color-light: #aaa;
+    --disabled-text-color: #444;
 
-  /* Indicator colors */
-  --error: #ff2a2a;
-  --warning: #ffdd55;
-  --success: var(--primary);
-  --info: #81d0d7;
+    /* Indicator colors */
+    --error: #ff2a2a;
+    --warning: #ffdd55;
+    --success: var(--btnPrimary);
+    --info: #81d0d7;
 
-  /* Text sizes */
-  --text-size-small: 14px;
-  --text-size-extra-small: 14px;
+    /* Text sizes */
+    --text-size-small: 14px;
+    --text-size-extra-small: 14px;
 }
 
 #root {
-  height: 100vh;
-  width: 100%;
-  min-width: 357px;
-  min-height: 600px;
+    height: 100vh;
+    width: 100%;
+    min-width: 357px;
+    min-height: 600px;
 }
 
 body {
-  color: #fff;
-  font-family: "Poppins";
-  font-weight: 300;
-  background-color: var(--background-main);
-  margin: 0;
-  position: relative;
-  height: 100vh;
-  min-width: 357px;
-  min-height: 600px;
+    color: #fff;
+    font-family: "Poppins";
+    font-weight: 300;
+    background-color: var(--background-main);
+    margin: 0;
+    position: relative;
+    height: 100vh;
+    min-width: 357px;
+    min-height: 600px;
+}
+
+@layer base {
+    /* :root {
+    --background: 0 0% 100%;
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 240 5.9% 10%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 240 5.9% 10%;
+    --radius: 0.5rem;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+  } */
+
+    /* .dark { */
+    :root {
+        --background: 206, 24%, 6%;
+        --foreground: 0 0% 98%;
+        /* --card: 240 10% 3.9%; */
+        --card: 208 25% 10%;
+        --card-foreground: 0 0% 98%;
+        --popover: 240 10% 3.9%;
+        --popover-foreground: 0 0% 98%;
+        /* --primary: 0 0% 98%; */
+        --primary: 109 100% 68%;
+        /*  */
+        --primary-foreground: 240 5.9% 10%;
+        /* --secondary: 240 3.7% 15.9%; */
+        --secondary: 205 24% 20%;
+        --secondary-foreground: 0 0% 98%;
+        --muted: 240 3.7% 15.9%;
+        --muted-foreground: 240 5% 64.9%;
+        --accent: 240 3.7% 15.9%;
+        --accent-foreground: 0 0% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 0 0% 98%;
+        --border: 240 3.7% 15.9%;
+        --input: 240 3.7% 15.9%;
+        --ring: 240 4.9% 83.9%;
+        --radius: 0.5rem;
+        --chart-1: 220 70% 50%;
+        --chart-2: 160 60% 45%;
+        --chart-3: 30 80% 55%;
+        --chart-4: 280 65% 60%;
+        --chart-5: 340 75% 55%;
+    }
+}
+
+@layer base {
+    * {
+        @apply border-border;
+    }
+    body {
+        @apply bg-background text-foreground;
+    }
 }
